# ai-compliance-app

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: iso9001_chunks.json
data/vector_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Chatbot.jsx  ComplianceAnalysis.jsx  DocumentList.jsx  DocumentUpload.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
scripts/: ingest_documents.py  setup_vector_db.py
src/compliance_ai/: __init__.py  main.py
src/compliance_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/compliance_ai/api/: __init__.py  dependencies.py
src/compliance_ai/api/routes/: __init__.py  chatbot.py  compliance.py  documents.py  health.py
src/compliance_ai/auth/: auth.py  routes.py  schemas.py
src/compliance_ai/core/: config.py  exceptions.py
src/compliance_ai/database/: __init__.py  document_manager.py  local_db.py  vector_store.py
src/compliance_ai/models/: __init__.py  schemas.py
src/compliance_ai/services/: __init__.py  compliance_service.py  embedding_service.py  llm_service.py  rag_service.py
src/compliance_ai/utils/: __init__.py  file_processor.py  logger.py
tests/: conftest.py
tests/test_api/: test_chatbot.py  test_compliance.py  test_health.py
