# ============================================
# FILE: pyproject.toml
# ============================================
[project]
name = "compliance-ai"
version = "0.1.0"
description = "AI-powered compliance chatbot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.1.0",
    "chromadb>=0.4.0",
    "pypdf>=3.17.0",
    "python-multipart>=0.0.6",
    "groq",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
]